--- a/documentation.html
+++ b/documentation.html
@@ -1,9 +1,128 @@
 <!DOCTYPE html>
-<html lang="pa">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>OpenSetu ਦਸਤਾਵੇਜ਼ੀਕਰਨ</title>
+  <title>OpenSetu Documentation</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+
+    <style>
+    /* Menu bar styling */
+    .top-menu {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      background: #f8f9fa;
+      padding: 12px 40px;
+      border-bottom: 1px solid rgba(0,0,0,0.05);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .top-menu a {
+      font-family: 'Inter', sans-serif;
+      color: #333;
+      text-decoration: none;
+      margin-left: 25px;
+      font-weight: 500;
+      transition: color 0.2s ease;
+    }
+    .top-menu a:hover {
+      color: #007BFF;
+    }
+
+    /* Hamburger button */
+    .menu-toggle {
+      display: none;
+      font-size: 1.5em;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #333;
+    }
+
+    /* Side menu */
+    .side-menu {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: #f8f9fa;
+      overflow-x: hidden;
+      transition: 0.3s;
+      padding-top: 60px;
+      z-index: 2000;
+    }
+    .side-menu a {
+      display: block;
+      padding: 10px 20px;
+      color: #333;
+      text-decoration: none;
+      font-family: 'Inter', sans-serif;
+      font-weight: 500;
+    }
+    .side-menu a:hover {
+      color: #007BFF;
+    }
+    .side-menu .close-btn {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      font-size: 2em;
+      text-decoration: none;
+      color: #333;
+    }
+
+    /* Responsive rules */
+    @media (max-width: 768px) {
+      .top-menu a {
+        display: none;
+      }
+      .menu-toggle {
+        display: block;
+        margin-left: auto;
+      }
+    }
+  </style>
+</head>
+<body class="page">
+
+  <!-- Top Menu -->
+<nav class="top-menu">
+  <a href="index.html">ਹੋਮ</a>
+  <a href="about.html">ਸਾਡੇ ਬਾਰੇ</a>
+  <a href="beta.html">ਕਾਨੂੰਨੀ</a>
+  <a href="documentation.html">ਡਾਕਯੂਮੈਂਟੇਸ਼ਨ</a>
+  <a href="domain.html">ਡੋਮੇਨ ਲਿਸਟ</a>
+  <button class="menu-toggle" onclick="openMenu()"><i class="fas fa-bars"></i></button>
+</nav>
+
+<!-- Side Menu -->
+<div id="sideMenu" class="side-menu">
+  <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
+  <a href="index.html">ਹੋਮ</a>
+  <a href="about.html">ਸਾਡੇ ਬਾਰੇ</a>
+  <a href="beta.html">ਕਾਨੂੰਨੀ</a>
+  <a href="documentation.html">ਡਾਕਯੂਮੈਂਟੇਸ਼ਨ</a>
+  <a href="domain.html">ਡੋਮੇਨ ਲਿਸਟ</a>
+</div>
+
+
+  <script>
+function openMenu() {
+  document.getElementById("sideMenu").style.width = "250px"; // Adjust width as needed
+}
+
+function closeMenu() {
+  document.getElementById("sideMenu").style.width = "0";
+}
+</script>
+
+
   <style>
     body {
       margin: 0;
@@ -127,35 +246,34 @@
     </div>
 
     <section class="section">
-      <h1>ਦਸਤਾਵੇਜ਼ੀਕਰਨ</h1>
+  <h1>ਡਾਕਯੂਮੈਂਟੇਸ਼ਨ</h1>
 
-      <h2>OpenSetu: ਇਹ ਕਿਵੇਂ ਕੰਮ ਕਰਦਾ ਹੈ</h2>
-      <p>
-        OpenSetu HTTPS (DoH) ਉੱਤੇ DNS ਦੁਆਰਾ ਸੰਚਾਲਿਤ ਹੈ, ਇੱਕ ਨੈੱਟਵਰਕ ਪ੍ਰੋਟੋਕੋਲ ਜੋ HTTPS ਉੱਤੇ ਡੋਮੇਨ ਨਾਮਾਂ ਨੂੰ ਸੁਰੱਖਿਅਤ ਢੰਗ ਨਾਲ ਹੱਲ ਕਰਦਾ ਹੈ। DoH ਵਿਚੋਲਿਆਂ ਨੂੰ DNS ਪੁੱਛਗਿੱਛਾਂ ਦੀ ਜਾਸੂਸੀ ਜਾਂ ਛੇੜਛਾੜ ਕਰਨ ਤੋਂ ਰੋਕ ਕੇ ਗੋਪਨੀਯਤਾ ਅਤੇ ਸੁਰੱਖਿਆ ਨੂੰ ਵਧਾਉਂਦਾ ਹੈ।
-      </p>
+  <h2>ਓਪਨਸੇਤੁ: ਇਹ ਕਿਵੇਂ ਕੰਮ ਕਰਦਾ ਹੈ</h2>
+  <p>
+    ਓਪਨਸੇਤੁ <strong>DNS over HTTPS (DOH)</strong> ਦੁਆਰਾ ਸੰਚਾਲਿਤ ਹੈ, ਇੱਕ ਨੈਟਵਰਕ ਪ੍ਰੋਟੋਕੋਲ ਜੋ ਡੋਮੇਨ ਨਾਂ ਨੂੰ HTTPS ਰਾਹੀਂ ਸੁਰੱਖਿਅਤ ਤਰੀਕੇ ਨਾਲ ਰੀਜ਼ਾਲਵ ਕਰਦਾ ਹੈ। DOH ਪ੍ਰਾਈਵੇਸੀ ਅਤੇ ਸੁਰੱਖਿਆ ਵਧਾਉਂਦਾ ਹੈ ਕਿਉਂਕਿ ਇਹ ਮੱਧਵਾਰੀਆਂ ਨੂੰ DNS ਕਵੈਰੀਜ਼ ਨੂੰ ਜਾਸੂਸੀ ਕਰਨ ਜਾਂ ਛੇੜਛਾੜ ਕਰਨ ਤੋਂ ਰੋਕਦਾ ਹੈ।
+  </p>
 
-      <h2>ਭਾਰਤ ਦਾ ਇੰਟਰਨੈੱਟ</h2>
-      <p>
-        ਭਾਰਤ ਦਾ ਇੰਟਰਨੈੱਟ ਹੈਂਡਸ਼ੇਕ 'ਤੇ ਬਣਾਇਆ ਗਿਆ ਹੈ, ਇੱਕ ਓਪਨ-ਸੋਰਸ, ਵਿਕੇਂਦਰੀਕ੍ਰਿਤ ਨਾਮਕਰਨ ਪ੍ਰੋਟੋਕੋਲ ਜੋ ਇੰਟਰਨੈੱਟ ਲਈ ਇੱਕ ਵਿਕਲਪਿਕ ਰੂਟ ਜ਼ੋਨ ਵਜੋਂ ਕੰਮ ਕਰਦਾ ਹੈ। ਇਹ ਸੈਂਸਰਸ਼ਿਪ-ਰੋਧਕ, ਛੇੜਛਾੜ-ਰੋਧਕ ਡੋਮੇਨ ਰੈਜ਼ੋਲਿਊਸ਼ਨ ਨੂੰ ਸਮਰੱਥ ਬਣਾਉਂਦਾ ਹੈ, ਜੋ ਕਿ ਸਾਡੇ ਇੰਟਰਨੈੱਟ ਦੀ ਰੀੜ੍ਹ ਦੀ ਹੱਡੀ ਹੈ।
-      </p>
-      <p>
-        ਨੇੜਲੇ ਭਵਿੱਖ ਵਿੱਚ, ਅਸੀਂ ਇੱਕ ਹੋਰ ਖੁੱਲ੍ਹੇ ਅਤੇ ਇੰਟਰਓਪਰੇਬਲ ਵੈੱਬ ਨੂੰ ਸਮਰੱਥ ਬਣਾਉਣ ਲਈ <strong>ENS (Ethereum Name Service)</strong> ਅਤੇ <strong>IPFS (ਇੰਟਰ-ਪਲੈਨੇਟਰੀ ਫਾਈਲ ਸਿਸਟਮ)</strong> ਵਰਗੇ ਪ੍ਰੋਟੋਕੋਲ ਦਾ ਸਮਰਥਨ ਕਰਨ ਦੀ ਵੀ ਯੋਜਨਾ ਬਣਾ ਰਹੇ ਹਾਂ।
-      </p>
+  <h2>ਭਾਰਤ ਦਾ ਇੰਟਰਨੇਟ</h2>
+  <p>
+    ਭਾਰਤ ਦਾ ਇੰਟਰਨੇਟ <strong>ਹੈਂਡਸ਼ੇਕ</strong> ‘ਤੇ ਬਣਾਇਆ ਗਿਆ ਹੈ, ਇੱਕ ਖੁੱਲ੍ਹਾ ਸਰੋਤ, ਡਿਸੈਂਟਰਲਾਈਜ਼ਡ ਨੇਮਿੰਗ ਪ੍ਰੋਟੋਕੋਲ ਜੋ ਇੰਟਰਨੇਟ ਲਈ ਵਿਕਲਪਕ ਰੂਟ ਜੋਨ ਦੇ ਤੌਰ ਤੇ ਕੰਮ ਕਰਦਾ ਹੈ। ਇਹ ਸੈਂਸਰਸ਼ਿਪ-ਰੋਧੀ ਅਤੇ ਛੇੜਛਾੜ-ਮੁਕਤ ਡੋਮੇਨ ਰੀਜ਼ਾਲੂਸ਼ਨ ਯੋਗ ਬਣਾਉਂਦਾ ਹੈ। ਸਾਡੇ ਇੰਟਰਨੇਟ ਦੀ ਮੂਲ ਹੱਡੀ।
+  </p>
+  <p>
+    ਭਵਿੱਖ ਵਿੱਚ, ਅਸੀਂ <strong>ENS (Ethereum Name Service)</strong> ਅਤੇ <strong>IPFS (InterPlanetary File System)</strong> ਵਰਗੇ ਪ੍ਰੋਟੋਕੋਲਾਂ ਦਾ ਸਮਰਥਨ ਕਰਨ ਦੀ ਯੋਜਨਾ ਵੀ ਬਣਾਈ ਹੈ ਤਾਂ ਕਿ ਵੈੱਬ ਹੋਰ ਖੁੱਲ੍ਹਾ ਅਤੇ ਇੰਟਰਓਪਰੇਬਲ ਬਣ ਸਕੇ।
+  </p>
 
-      <h2>ਆਪਣਾ ਖੁਦ ਦਾ DoH ਬਣਾਓ</h2>
-      <p>
-        ਕੋਈ ਵੀ ਭਾਰਤੀ ਇੰਟਰਨੈੱਟ ਤੱਕ ਪਹੁੰਚ ਅਤੇ ਵਿਸਤਾਰ ਕਰਨ ਲਈ ਇੱਕ DoH ਰੈਜ਼ੋਲਵਰ ਬਣਾ ਸਕਦਾ ਹੈ — ਭਾਵੇਂ ਇਹ ਸਕੂਲ ਹੋਵੇ, ਯੂਨੀਵਰਸਿਟੀ ਹੋਵੇ, ਸਟਾਰਟਅੱਪ ਹੋਵੇ, ਗੈਰ-ਮੁਨਾਫ਼ਾ ਹੋਵੇ, ਜਾਂ ਸਰਕਾਰੀ ਏਜੰਸੀ ਹੋਵੇ।<br>
-        <strong>ਓਪਨਸੇਟੂ</strong> ਸਿਰਫ਼ ਇੱਕ ਉਦਾਹਰਣ ਹੈ; <em>ਤੁਸੀਂ ਆਪਣਾ ਖੁਦ ਚਲਾ ਸਕਦੇ ਹੋ।</em>
-      </p>
+  <h2>ਆਪਣਾ DOH ਬਣਾਓ</h2>
+  <p>
+    ਕੋਈ ਵੀ ਸਕੂਲ, ਯੂਨੀਵਰਸਿਟੀ, ਸਟਾਰਟਅਪ, ਗੈਰ-ਨਫ਼ਾ, ਜਾਂ ਸਰਕਾਰੀ ਏਜੰਸੀ ਹੋਵੇ, ਉਹ ਡੋਮੇਨ ਤੱਕ ਪਹੁੰਚ ਅਤੇ ਭਾਰਤੀ ਇੰਟਰਨੇਟ ਨੂੰ ਵਧਾਉਣ ਲਈ ਆਪਣਾ DOH ਰੀਜ਼ਾਲਵਰ ਬਣਾਉਂ ਸਕਦਾ ਹੈ। 
+    <strong>ਓਪਨਸੇਤੁ</strong> ਸਿਰਫ ਇੱਕ ਉਦਾਹਰਣ ਹੈ; <em>ਤੁਸੀਂ ਆਪਣਾ ਚਲਾ ਸਕਦੇ ਹੋ।</em>
+  </p>
 
-      <h2>ਸਟੈਕ ਦੀ ਪੜਚੋਲ ਕਰੋ</h2>
-      <ul>
-        <li>🧰 <strong>ਡੌਕਰ DoH ਸਰਵਰ:</strong> <a href="https://github.com/satishweb/docker-doh" target="_blank">https://github.com/satishweb/docker-doh</a></li>
-        <li>🌐 <strong>ਹੱਥ ਮਿਲਾਉਣ ਵਾਲੇ (HNS) ਦਸਤਾਵੇਜ਼:</strong> <a href="https://hsd-dev.org/" target="_blank">https://hsd-dev.org/</a></li>
-        <li>🦊 <strong>ਈਥਰਿਅਮ ਨਾਮ ਸੇਵਾ (ENS):</strong> <a href="https://ens.domains/" target="_blank">https://ens.domains/</a></li>
-        <li>📦 <strong>IPFS: ਇੰਟਰਪਲੈਨੇਟਰੀ ਫਾਈਲ ਸਿਸਟਮ:</strong> <a href="https://ipfs.tech/" target="_blank">https://ipfs.tech/</a></li>
-      </ul>
-    </section>
+  <h2>ਸਟੈਕ ਦੀ ਪੜਚੋਲ ਕਰੋ</h2>
+  <p>
+    <strong style="font-size: 2.5rem;">ਗਿੱਥਬ ਲਿੰਕ ਜਲਦੀ ਆ ਰਹੇ ਹਨ...</strong> 
+  </p>
+
+</section>
+
   </section>
 
 </body>
